flux/apps/cloud/ocis_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocis
  namespace: cloud
  labels:
    app.kubernetes.io/name: ocis
    app.kubernetes.io/instance: ocis
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - "cloud.dev.lab.reisman.org"
      secretName: ocis-tls
  rules:
    - host: "cloud.dev.lab.reisman.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ocis
                port:
                  name: http
